Ignore case when detecting OS